<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidLearning</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="test_linearlayout">测试线性布局 LinearLayout</string>
    <string name="test_framelayout">测试帧布局 FrameLayout</string>
    <string name="test_relativelayout">相对布局</string>
    <string name="test_tablelayout">表格布局</string>
    <string name="steps_stair">楼梯</string>
    <string name="text_content">我是textView 号码是 tel:+8618523910579 http://www.baidu.com   tianyu@gamil.com </string>
    <string name="normal_button">普通样式的按钮</string>
    <string name="custom_button">自定义样式的按钮</string>
    <string name="netsted_action">内部类做事件监听</string>
    <string name="amous_action">匿名内部类做事件监听</string>
    <string name="activity_action">Activity做事件监听</string>
    <string name="netsted_object_action">内部类对象做事件监听</string>
    <string name="xml_action">xml指定事件监听</string>
    <string name="reset">重置</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="s_id">学号</string>
    <string name="s_name">姓名</string>
    <string name="s_grade">班级</string>
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_add">+</string>
    <string name="number_minus">-</string>
    <string name="number_plus">*</string>
    <string name="number_div">/</string>
    <string name="number_equ">=</string>
    <string name="number_dot">.</string>

    <string-array name="fruit_titles">
        <item>apple</item>
        <item>little apple</item>
        <item>big apple</item>
        <item>banana</item>
        <item>orange</item>
        <item>peach</item>
        <item>pear</item>
    </string-array>
    
    <string name="activity_as_dialog">Activity做Dialog</string>
</resources>
