<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- 设计一个计算器键盘 -->
        <!-- 设计第一排 -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_1"
                />

            <Button
                android:id="@+id/button_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_2" />

            <Button
                android:id="@+id/button_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_3" />

            <Button
                android:id="@+id/button_div"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_div" />
        </LinearLayout>

        <!-- 设计第二排 -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_4" />

            <Button
                android:id="@+id/button_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_5" />

            <Button
                android:id="@+id/button_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_6" />

            <Button
                android:id="@+id/button_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_plus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_7" />

            <Button
                android:id="@+id/button_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_8" />

            <Button
                android:id="@+id/button_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_9" />

            <Button
                android:id="@+id/button_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_minus" />
        </LinearLayout>

        <!-- 最后一排 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/number_0"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/number_0" />

                    <Button
                        android:id="@+id/number_dot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number_dot" />
                </LinearLayout>

                <Button
                    android:id="@+id/number_equ"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/number_equ" />
            </LinearLayout>

            <Button
                android:id="@+id/number_add"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/number_add" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>