<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/normal_button" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dip"
        android:background="@drawable/button_selector"
        android:text="@string/custom_button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dip"
        android:background="@drawable/button_selector"
        android:text="@string/netsted_action" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dip"
        android:background="@drawable/button_selector"
        android:text="@string/amous_action" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dip"
        android:background="@drawable/button_selector"
        android:text="@string/activity_action" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dip"
        android:background="@drawable/button_selector"
        android:text="@string/netsted_object_action" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dip"
        android:background="@drawable/button_selector"
        android:text="@string/xml_action"
        android:onClick="xmlClick"/>

</LinearLayout>