<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <ImageView
        android:id="@+id/image1"
        android:layout_width="100dip"
        android:layout_height="100dip"
        android:layout_margin="5dip"
        android:background="@drawable/aa4"
        android:scaleType="centerInside"
        android:contentDescription="@string/app_name"
        android:clickable="true"
        android:layout_centerInParent="true"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/action_settings"
        android:background="@drawable/button_selector"
        android:text="@string/reset"
        android:layout_margin="5dip"/>
    
</RelativeLayout>
