<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="58dip"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/tablayout1"
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/tab_selected"
        android:orientation="vertical"
        android:clickable="true">

        <ImageView
            android:id="@+id/image1"
            android:layout_width="30dip"
            android:layout_height="30dip"
            android:layout_gravity="center|top"
            android:contentDescription="@string/app_name"
            android:src="@drawable/a005" />

        <TextView
            android:id="@+id/tab1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|bottom"
            android:paddingBottom="5dip"
            android:text="@string/number_0" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tablayout2"
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/tab_normal"
        android:orientation="vertical" 
        android:clickable="true">

        <ImageView
            android:id="@+id/image2"
            android:layout_width="30dip"
            android:layout_height="30dip"
            android:layout_gravity="center|top"
            android:contentDescription="@string/app_name"
            android:src="@drawable/a006" />

        <TextView
            android:id="@+id/tab2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|bottom"
            android:paddingBottom="10dip"
            android:text="@string/number_1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tablayout3"
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/tab_normal"
        android:orientation="vertical"
        android:clickable="true">

        <ImageView
            android:id="@+id/image3"
            android:layout_width="30dip"
            android:layout_height="30dip"
            android:layout_gravity="center|top"
            android:contentDescription="@string/app_name"
            android:src="@drawable/a007" />

        <TextView
            android:id="@+id/tab3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|bottom"
            android:paddingBottom="10dip"
            android:text="@string/number_2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tablayout4"
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/tab_normal"
        android:orientation="vertical"
        android:clickable="true">

        <ImageView
            android:id="@+id/image4"
            android:layout_width="30dip"
            android:layout_height="30dip"
            android:layout_gravity="center|top"
            android:contentDescription="@string/app_name"
            android:src="@drawable/a008" />

        <TextView
            android:id="@+id/tab4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|bottom"
            android:paddingBottom="10dip"
            android:text="@string/number_3" />
    </LinearLayout>

</LinearLayout>